--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ section {
 
 .timerText {
     font-family: Dodge;
-    font-size: 1em;
+    font-size: 1.5em;
     position: relative;
     top: -1em;
     padding: 0;
@@ -146,7 +146,9 @@ section {
 }
 
 #venueText {
-    height: 45%
+    height: 45%;
+    font-family: Candal;
+    color: white;
 }
 
 #map {
