--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,8 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
     left: 0;
@@ -50,6 +50,7 @@ html, body {
 
 #foreground {
     background-image: url("../img/foreground.png");
+    background-position: left;
 }
 
 section {
