Added footer logos

--- a/css/main.css
+++ b/css/main.css
@@ -69,13 +69,61 @@ section {
 }
 
 #logo {
-    position: absolute;
+    position: fixed;
     background-size: cover;
     top: 3em;
     left: 3em;
     height: 7em;
     width: 7em;
     background-image: url("../img/logo.png");
+    z-index: 10000;
+}
+
+#footer {
+    position: absolute;
+    top: 87%;
+    height: 13%;
+    width: 100%;
+    z-index: 10000;
+}
+
+.footerLogos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "f t g";
+    align-items: start;
+    grid-gap: 2em;
+    position: absolute;
+    right: 2.5em;
+    top: 2.8em;
+    height: 1.5em;
+    width: 10.5em;
+}
+
+.footerLogo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1.7em;
+    width: 1.7em;
+    background-size: cover;
+    background-color: transparent;
+}
+
+#facebook {
+    grid-area: f;
+    background-image: url("../img/facebookLogo.png");
+}
+
+#twitter {
+    width: 2em;
+    grid-area: t;
+    background-image: url("../img/twitterLogo.png");
+}
+
+#github {
+    grid-area: g;
+    background-image: url("../img/githubLogo.png");
 }
 
 /* Venue Section */
