--- a/css/main.css
+++ b/css/main.css
@@ -43,14 +43,14 @@ html, body {
 }
 
 #foreground {
-    height: 295%;
+    height: 330%;
 }
 
 .faqBG {
     position: absolute;
     top: 100%;
     z-index: 1000000;
-    height: 195%;
+    height: 230%;
 }
 
 .background {
@@ -110,10 +110,15 @@ section {
 
 #footer {
     position: absolute;
-    top: 87%;
-    height: 13%;
+    top: 313%;
+    height: 8em;
     width: 100%;
-    z-index: 10000;
+    z-index: 100000000;
+}
+
+#footerText {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.3em;
 }
 
 .footerLogos {
@@ -123,9 +128,11 @@ section {
     align-items: center;
     grid-gap: 2em;
     position: absolute;
-    right: 2.5em;
-    bottom: 2em;
-    height: 1.5em;
+    left: 0;
+    right: 0;
+    bottom: 0em;
+    margin: auto;
+    height: 50%;
     width: 10.5em;
 }
 
@@ -370,14 +377,7 @@ span {
     #foreground {
         z-index: -1000;
     }
-    .footerLogos {
-        left: 0;
-        right: 0;
-        bottom: 0.7em;
-        margin: auto;
-        height: 50%;
-        width: 10.5em;
-    }
+
     /* Timer */
     #timer {
         padding: 20% 10% 0 10%;
