Fix text position in FAQ

--- a/css/main.css
+++ b/css/main.css
@@ -284,40 +284,40 @@ section {
 .questionBG {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 3em 2em 10em;
+    grid-template-rows: 120px 30px 195px;
+    grid-row-gap: 0;
     height: 98%;
     width: 100%;
     background-color: #231F30;
 }
 
 .questionIcon {
-    height: 1.7em;
+    /* background-color: red; */
     color: white;
     margin: auto;
     position: relative;
 }
 
 .questionTitle {
+    height: 100%;
     position: relative;
-    padding-top: 1.8em;
+    top: -30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 500;
-    margin-left: 0.3em;
-    margin-right: 0.3em;
+    margin-left: 5px;
+    margin-right: 5px;
     font-size: 1.5em;
-    line-height: 1em;
 }
 
 .questionText {
-    padding-top: 3em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: bold;
     font-size: 1em;
     height: 100%;
-    line-height: 14em;
+    line-height: 195px;
     text-align: center;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 span {
