Rework positions to be relative

--- a/css/main.css
+++ b/css/main.css
@@ -13,16 +13,10 @@
     src: url('../fonts/Candal.ttf') format("truetype");
 }
 
-/* Universal */
-
 /* Core */
 
-#faq {
-    position: absolute;
-    top: 100%;
-}
-
 html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -30,190 +24,85 @@ html, body {
     background-color: #2B263A;
 }
 
-.fullscreen {
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-#foreground {
-    height: 330%;
-}
-
-.faqBG {
-    position: absolute;
-    top: 100%;
-    z-index: 1000000;
-    height: 230%;
-}
-
-.background {
-    z-index: -1000;
-}
-
-#faqStars {
-    background-image: url("../img/faqStars.png");
-}
-
-#faqMeteor {
-    background-image: url("../img/faqMeteor.png");
-}
-
-#background {
-    background-image: url("../img/planets.png");
-}
-
-#stars {
-    background-image: url("../img/stars.png");
-}
-
-#falcon {
-    background-image: url("../img/falcon.png");
-}
-
-#meteor {
-    background-image: url("../img/meteor.png");
-}
-
-#foreground {
-    background-image: url("../img/foreground.png");
-    background-position: left;
-    z-index: 1000;
+body {
+    position: relative;
 }
 
 section {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.fullscreen {
     position: absolute;
-    min-height: 100%;
-    min-width: 100%;
+    background-size: cover;
+    background-position-y: bottom;
+    height: 100%;
+    width: 100%;
 }
 
 .text {
     color: white;
 }
 
+.grid {
+    display: grid;
+}
+
 #logo {
     position: fixed;
     background-size: cover;
-    top: 3em;
-    left: 3em;
-    height: 5em;
-    width: 5em;
+    top: 3rem;
+    left: 3rem;
+    height: 5rem;
+    width: 5rem;
     background-image: url("../img/logo.png");
-    z-index: 10000199999;
-}
-
-#ticketsBtn {
-    width: 9em;
-    height: 3.7em;
-    z-index: 100000000;
-    position: absolute;
-    right: 3em;
-    top: 3.65em;
-    background-image: url("../img/ticketsBtn.png");
-    background-size: cover;
-}
-
-#footer {
-    display: block;
-    position: absolute;
-    top: 100%;
-    height: 8em;
-    width: 100%;
-    z-index: 100000000;
-}
-
-#footerText {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.3em;
-}
-
-.footerLogos {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas: "f t g";
-    align-items: center;
-    grid-gap: 2em;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0em;
-    margin: auto;
-    height: 50%;
-    width: 10.5em;
-}
-
-.footerLogo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 2em;
-    width: 2em;
-    background-size: cover;
-    background-color: transparent;
-}
-
-#facebook {
-    grid-area: f;
-    background-image: url("../img/facebookLogo.png");
-}
-
-#twitter {
-    left: -0.25em;
-    width: 2.5em;
-    grid-area: t;
-    background-image: url("../img/twitterLogo.png");
-}
-
-#github {
-    grid-area: g;
-    background-image: url("../img/githubLogo.png");
-}
-
-/* Venue Section */
-
-#venue {
-    background-color: #28315A;
-    position: absolute;
-    top: 100%;
     z-index: 1000;
 }
 
-#venueInformation {
-    background-color: #28315A;
-    background-color: transparent;
+/* Hero section */
+
+#hero>#background {
+    z-index: 0;
 }
 
-/* Grids */
-
-.timerGrid, .venueGrid {
-    display: grid;
+#hero>#content {
+    z-index: 1;
+    grid-template-rows: repeat(3, 1fr);
 }
 
-/* Timer */
-
-#days {
-    grid-area: d;
+#foreground {
+    z-index: 2;
+    background-image: url('../img/heroForeground.png');
 }
 
-#hours {
-    grid-area: h;
+#planets {
+    background-image: url('../img/planets.png');
 }
 
-#minutes {
-    grid-area: m;
+#stars {
+    background-image: url('../img/stars.png');
 }
 
-#seconds {
-    grid-area: s;
+#falcon {
+    background-image: url('../img/falcon.png');
 }
 
-/* Desktop */
+#meteor {
+    background-image: url('../img/meteor.png');
+}
+
+#ticketsBtn {
+    position: relative;
+    width: 12.5rem;
+    height: 8.625rem;
+    margin: 0 auto;
+    top: 5rem;
+    background-size: cover;
+    background-image: url('../img/ticketsBtn.png');
+    z-index: 100;
+}
 
 /* Timer */
 
@@ -222,22 +111,21 @@ section {
     grid-template-areas: "d h m s" "d h m s";
     align-items: start;
     list-style: none;
-    padding: 13% 10% 0 10%;
-    margin: 0;
+    margin: 0 10%;
 }
 
 .timerText {
     font-family: Dodge;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     position: relative;
-    top: -1em;
+    top: -1rem;
     padding: 0;
     margin: 0;
 }
 
 .timerNumber {
     font-family: Bebas;
-    font-size: 6em;
+    font-size: 6rem;
     padding: 0;
     margin: 0;
 }
@@ -246,51 +134,64 @@ section {
 
 #title {
     position: relative;
-    top: 0;
     font-family: "Dodge";
-    font-size: 6em;
+    font-size: 6rem;
     width: 100%;
-    padding: 7% 0 0 0;
+    margin: -7% 0 0 0;
     z-index: 1000;
 }
 
 #eventInfo {
     position: relative;
-    top: -0.5em;
+    top: -1.4rem;
     font-family: "Bebas";
-    font-size: 2em;
+    font-size: 2rem;
     z-index: 1000;
 }
 
-/* FAQ */
+/* FAQ Section */
 
-.faqGrid {
-    display: grid;
+#faq {
+    top: -1px;
+    height: 189%;
+    background-image: url('../img/faqBG.png');
+    background-position-y: top;
+    background-size: cover;
+    z-index: 100;
+}
+
+#faqTitle {
+    position: relative;
+    background-image: url('../img/faqRibbon.png');
+    background-size: cover;
+    top: 4rem;
+    width: 22rem;
+    height: 6rem;
+    margin: 0 auto 8rem auto;
+}
+
+#faqGrid {
+    position: relative;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 0;
-    grid-row-gap: 5em;
+    grid-row-gap: 3em;
     z-index: 999999999;
     align-items: center;
     justify-content: center;
-    position: relative;
-    top: 0;
-    left: 0;
-    padding-top: 6em;
-    padding-bottom: 5em;
-    height: 210%;
+    margin-bottom: 5em;
     width: 100%;
 }
 
 .faqQuestion {
     position: relative;
     bottom: 0;
-    margin: auto;
+    margin: 0 auto;
     height: 370px;
     width: 290px;
 }
 
 .faqQuestion:hover {
-    box-shadow: 0 -10px 100px rgba(138, 138, 138, 0.3); 
+    box-shadow: 0 -10px 100px rgba(138, 138, 138, 0.3);
 }
 
 .questionBG {
@@ -304,7 +205,6 @@ section {
 }
 
 .questionIcon {
-    /* background-color: red; */
     color: white;
     margin: auto;
     position: relative;
@@ -318,13 +218,13 @@ section {
     font-weight: 500;
     margin-left: 5px;
     margin-right: 5px;
-    font-size: 1.5em;
+    font-size: 22px;
 }
 
 .questionText {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: bold;
-    font-size: 1em;
+    font-size: 15px;
     height: 100%;
     line-height: 195px;
     text-align: center;
@@ -352,113 +252,111 @@ span {
     background-color: #F49460
 }
 
-/* Venue */
+/* Sponsors section */
 
-.venueGrid {
-    height: 100%;
+#sponsors {
+    height: 188%;
     width: 100%;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "i t";
-}
-
-#venuePicture {
-    background-image: url("../img/venue.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
+    background-image: url('../img/sponsorsBG.png');
     background-size: cover;
-    grid-area: "i";
 }
 
-#venueInformation {
-    grid-area: "t";
+#sponsorsTitle {
+    position: relative;
+    background-image: url('../img/sponsorsRibbon.png');
+    background-size: cover;
+    top: 8rem;
+    width: 37.5rem;
+    height: 6rem;
+    margin: 0 auto 15rem auto;
 }
 
-#venueText {
-    height: 45%;
-    font-family: Candal;
+#sponsors header {
+    font-family: Dodge;
+    font-size: 2.3rem;
+}
+
+#sponsors img {
+    background-size: cover;
+    height: auto;
+    margin: 3.5rem auto;
+}
+
+#gold > header {
+    color: #e8bc03;
+}
+
+#webApps {
+    width: 40rem;
+}
+
+#silver > header {
     color: white;
 }
 
-#map {
-    width: 100%;
-    height: 51%;
+#githubLogo {
+    width: 23rem;
 }
 
-/* Tablet */
-
-@media(max-width: 1024px) {
-    /* Core */
-    #foreground {
-        z-index: -1000;
-    }
-
-    /* Timer */
-    #timer {
-        padding: 20% 10% 0 10%;
-        margin: 0;
-    }
-    /* Title */
-    #title {
-        font-size: 4em;
-        padding: 10% 0 0 0;
-    }
-    #eventInfo {
-        font-size: 1.3em;
-    }
-    #logo {
-        top: 2em;
-        left: 2em;
-        height: 5em;
-        width: 5em;
-    }
+#bloomberg {
+    width: 33rem;
+    position: relative;
+    left: 5rem;
+    top: -0.3rem;
 }
 
-/* Phone */
+#bronze > header {
+    color: #cd7f32;
+}
 
-@media(max-width: 768px) {
-    /* Timer */
-    #timer {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-areas: "d h" "d h" "m s" "m s";
-        padding: 10% 10% 0 10%;
-    }
-    .timerNumber {
-        font-size: 4.5em;
-    }
-    .timerText {
-        font-size: 1em;
-    }
-    /* Title */
-    #title {
-        font-size: 2em;
-        padding: 13% 0 0 0;
-    }
-    #eventInfo {
-        font-size: 1em;
-    }
-    /* Venue */
-    .venueGrid {
-        grid-template-columns: 1fr;
-        grid-template-areas: "i" "t";
-    }
-    #logo {
-        top: 1em;
-        left: 1em;
-        height: 3em;
-        width: 3em;
-    }
-    .faqGrid {
-        grid-template-columns: repeat(1, 1fr);
-    }
-    #ticketsBtn {
-        width: 4.5em;
-        height: 1.85em;
-        right: 1em;
-        top: 1.575em;
-    }
-    /* #footer {
-        position: absolute;
+#morganStanley {
+    width: 37rem;
+}
 
-        top: 5000px;
-    } */
+/* Footer */
+
+#footer {
+    margin-top: 3rem;
+    display: block;
+    height: 8em;
+}
+
+#footerText {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.3em;
+}
+
+.footerLogos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "f t g";
+    align-items: center;
+    grid-gap: 2em;
+    margin: 0 auto;
+    height: 50%;
+    width: 10.5em;
+}
+
+.footerLogo {
+    height: 2em;
+    width: 2em;
+    background-size: cover;
+    background-color: transparent;
+}
+
+#facebook {
+    grid-area: f;
+    background-image: url("../img/facebookLogo.png");
+}
+
+#twitter {
+    left: -0.25em;
+    width: 2.5em;
+    grid-area: t;
+    background-image: url("../img/twitterLogo.png");
+}
+
+#github {
+    grid-area: g;
+    background-image: url("../img/githubLogo.png");
 }
