--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ span {
 /* Sponsors section */
 
 #sponsors {
-    height: 188%;
+    height: auto;
     width: 100%;
     background-image: url('../img/sponsorsBG.png');
     background-size: cover;
@@ -316,17 +316,19 @@ span {
 /* Footer */
 
 #footer {
-    margin-top: 3rem;
+    padding-top: 3rem;
     display: block;
     height: 8em;
 }
 
 #footerText {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 1.3em;
+    font-size: 1.2rem;
 }
 
 .footerLogos {
+    position: relative;
+    top: -1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: "f t g";
