Made the links open new tabs

--- a/css/main.css
+++ b/css/main.css
@@ -68,8 +68,11 @@ section {
 }
 
 #hero>#content {
-    z-index: 1;
     grid-template-rows: repeat(3, 1fr);
+}
+
+#timer, #header {
+    z-index: 1;
 }
 
 #foreground {
