--- a/css/main.css
+++ b/css/main.css
@@ -291,7 +291,7 @@ span {
     top: 8rem;
     width: 37.5rem;
     height: 6rem;
-    margin: 0 auto 15rem auto;
+    margin: 3rem auto 12rem auto;
 }
 
 #sponsors header {
