--- a/css/main.css
+++ b/css/main.css
@@ -212,10 +212,12 @@ section {
     margin: 0 auto;
     height: 370px;
     width: 290px;
+    z-index: 0;
 }
 
 .faqQuestion:hover {
     box-shadow: 0 -10px 100px rgba(138, 138, 138, 0.3);
+    z-index: 1;
 }
 
 .questionBG {
