Fix silver sponsors positions

--- a/css/main.css
+++ b/css/main.css
@@ -322,8 +322,9 @@ span {
 }
 
 #githubLogo {
+    position: relative;
     width: 23rem;
-    right: 2.5rem;
+    left: -2.5rem;
 }
 
 #bloomberg {
