--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,7 @@ span {
     #logo {
         position: absolute;
         background-size: cover;
-        top: 33%;
+        top: 35%;
         left: 40%;
         height: 80px;
         width: 80px;
@@ -481,7 +481,7 @@ span {
         top: -3rem;
         grid-template-columns: repeat(2, 1fr);
         grid-template-areas: "d h" "d h" "m s" "m s";
-        padding: 0 10%;
+        padding: 2% 10%;
     }
     .timerNumber {
         font-size: 4.5rem;
